2008-10-23 TualatriX <tualatrix@gmail.com>
	
	* pulog/urls.py: Cleaned up the urls and use the variable import from
	settings.py.
	* demo/settings.py: Added an new variable TEMPLATE_ROOT to hold
	template root folder.
	* demo/urls.py: Cleaned up the urls.

2008-10-16 TualatriX <tualatrix@gmail.com>

	* pulog/models.py: Modified the relation between Post and Category
	ManyToMany.
	* pulog/templates/imtx/post/title.html: Modified the Post's categoy
	display behavior. 
	* pulog/templates/imtx/post/archive.html: Fixed an typo.

2008-10-16 TualatriX <tualatrix@gmail.com>

	* demo/Settings.py: Variable TEMPLATE_DIRS use to store the current template
	name.
	* pulog/urls.py: Serve the templates dir for templates.
	* pulog/templates/imtx
	* pulog/static/css: Default template renamed to imtx, move default ccs to
	imtx. Modified the template to use /templates/**** url.

2008-10-15 Shawn <xuancn@hotmail.com>

	* Modified the templates dir structure so the app will be able to support
	multiple templates in the future.

2008-10-14 TualatriX <tualatrix@gmail.com>

	* Initial pulog project.